<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".presentation.ui.activities.MainActivity"
    app:umanoPanelHeight="68dp"
    app:umanoShadowHeight="4dp"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/maps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

        <!--Filter Bencana-->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="90dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/btn_filters"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_flood"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:theme="@style/ButtonFilter"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/round_fill"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_haze"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:theme="@style/ButtonFilter"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/primary_foreground"
                    android:background="@drawable/round_fill"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:theme="@style/ButtonFilter"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/primary_foreground"
                    android:background="@drawable/round_fill"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_earthquake"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:theme="@style/ButtonFilter"
                    android:textColor="@color/primary_foreground"
                    android:background="@drawable/round_fill"
                    android:backgroundTintMode="screen"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_volcano"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:theme="@style/ButtonFilter"
                    android:textColor="@color/primary_foreground"
                    android:background="@drawable/round_fill"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_fire"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:theme="@style/ButtonFilter"
                    android:textColor="@color/primary_foreground"
                    android:background="@drawable/round_fill"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </LinearLayout>

        </HorizontalScrollView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_main"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                app:queryHint="@string/hint_search"
                android:background="@drawable/round_fill"
                app:closeIcon="@drawable/ic_close_24"
                app:searchIcon="@drawable/ic_search_24"
                app:iconifiedByDefault="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_settings"/>

            <ListView
                tools:visibility="gone"
                android:id="@+id/list_search_suggestion"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:background="@color/primary_background"

                app:layout_constraintTop_toBottomOf="@id/search_main"
                app:layout_constraintStart_toStartOf="@id/search_main"
                app:layout_constraintEnd_toEndOf="@id/search_main"
                />

            <ImageView
                android:id="@+id/btn_settings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/desc_btn_settings"
                app:layout_constraintEnd_toEndOf="@id/search_main"
                app:layout_constraintBottom_toBottomOf="@id/search_main"
                app:layout_constraintTop_toTopOf="@id/search_main"
                android:background="@drawable/round_fill_green"
                android:src="@drawable/ic_settings_24"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

    <include
        android:id="@+id/bottom_sheet"
        layout="@layout/bottom_disaster_list"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_foreground_25"
        android:backgroundTintMode="multiply"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="150dp"
            android:layout_height="150dp"
            style="@style/Widget.AppCompat.ProgressBar"
            android:indeterminateTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>