<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_top"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="65dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:circularflow_radiusInDP="20dp"
    >

    <View
        android:id="@+id/placholder_line"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_fill"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        >

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close_24"
            android:visibility="invisible"
            android:layout_gravity="start|center_vertical"
            />

        <TextView
            android:id="@+id/tv_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/placholder_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_disaster_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            tools:listitem="@layout/item_row_disaster"
            app:layout_constraintTop_toBottomOf="@id/tv_list_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/warning_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/img_warning"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintBottom_toTopOf="@id/tv_warning"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</LinearLayout>